force-app/main/default/objects/Incident__c/fields/Assignee_Email__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Email__c</fullName>
    <label>Assignee Email</label>
    <type>Email</type>
</CustomField>