force-app/main/default/objects/Incident__c/fields/CI__c.field-meta.xml
<CustomField>
    <fullName>CI__c</fullName>
    <inlineHelpText>Configuration Item</inlineHelpText>
    <label>CI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Item1</fullName>
            </value>
            <value>
                <fullName>Item2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>