force-app/main/default/objects/Incident__c/fields/Conference_Audio_Number__c.field-meta.xml
<CustomField>
    <fullName>Conference_Audio_Number__c</fullName>
    <label>Conference / Audio Number</label>
    <type>Phone</type>
</CustomField>