force-app/main/default/objects/Incident__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Item1</fullName>
            </value>
            <value>
                <fullName>Item2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>