force-app/main/default/objects/Incident__c/fields/Impact_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Impact_Analysis__c</fullName>
    <label>Impact Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>