force-app/main/default/objects/Incident__c/fields/Inc_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Inc_Close_Time__c</fullName>
    <label>Incident Close Time</label>
    <type>DateTime</type>
</CustomField>