force-app/main/default/objects/Incident__c/fields/INC_on_Object__c.field-meta.xml
<CustomField>
    <fullName>INC_on_Object__c</fullName>
    <description>Field describes incident related to which object.</description>
    <label>Incident on</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SOE</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>