force-app/main/default/objects/Incident__c/fields/Inc_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Inc_Open_Time__c</fullName>
    <label>Incident Open Time</label>
    <type>DateTime</type>
</CustomField>