force-app/main/default/objects/Incident__c/fields/Inc_Type__c.field-meta.xml
<CustomField>
    <fullName>Inc_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Force Completed</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Backout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>