force-app/main/default/objects/Incident__c/fields/Incident_Duration__c.field-meta.xml
<CustomField>
    <fullName>Incident_Duration__c</fullName>
    <formula>IF(ISBLANK(Inc_Close_Time__c), (NOW()-Inc_Open_Time__c)*24*60, (Inc_Close_Time__c  -  Inc_Open_Time__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>