force-app/main/default/objects/Incident__c/fields/Incident_Manager__c.field-meta.xml
<CustomField>
    <fullName>Incident_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>