force-app/main/default/objects/Incident__c/fields/MIS__c.field-meta.xml
<CustomField>
    <fullName>MIS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIS</label>
    <referenceTo>MIS__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>