force-app/main/default/objects/Incident__c/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Resolution Required</fullName>
            </value>
            <value>
                <fullName>No Resolution but Backout</fullName>
            </value>
            <value>
                <fullName>No Resolution but Continue</fullName>
            </value>
            <value>
                <fullName>No Resolution with Temp Fix</fullName>
            </value>
            <value>
                <fullName>Resolution with Root Cause</fullName>
            </value>
            <value>
                <fullName>Permanent Resolution</fullName>
            </value>
            <value>
                <fullName>Resolved with Temp Fix</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>