force-app/main/default/objects/Incident__c/fields/Risk_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation__c</fullName>
    <label>Risk Mitigation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>