force-app/main/default/objects/Incident__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service1</fullName>
            </value>
            <value>
                <fullName>Service2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>