force-app/main/default/objects/Incident__c/fields/SOE1__c.field-meta.xml
<CustomField>
    <fullName>SOE1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SOE__c.MIS__c</field>
            <operation>equals</operation>
            <valueField>$Source.MIS__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SOE__c</referenceTo>
    <relationshipLabel>Incidents (SOE)</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>