force-app/main/default/objects/Incident__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Task__c.SOE__c</field>
            <operation>equals</operation>
            <valueField>$Source.SOE1__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents1</relationshipName>
    <type>Lookup</type>
</CustomField>