force-app/main/default/objects/Incident__c/fields/Technical_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Technical_Recommendation__c</fullName>
    <label>Technical Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>