force-app/main/default/objects/Incident__c/recordTypes/Bug_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Bug_Record_Type</fullName>
    <active>true</active>
    <label>Bug Record Type</label>
</RecordType>