force-app/main/default/objects/Incident__c/validationRules/Validation_Conference_Audio_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Conference_Audio_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( LEN ( Conference_Audio_Number__c ) = 0, REGEX(Conference_Audio_Number__c, &quot;[0-9 #*+-]+&quot;) ) )</errorConditionFormula>
    <errorMessage>Conference Audio Number accept only Digits and # * + -</errorMessage>
</ValidationRule>