force-app/main/default/objects/Incident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MIS__c</columns>
    <columns>SOE1__c</columns>
    <columns>Task__c</columns>
    <columns>Inc_Type__c</columns>
    <columns>Status__c</columns>
    <columns>INC_on_Object__c</columns>
    <columns>Inc_Open_Time__c</columns>
    <columns>Inc_Close_Time__c</columns>
    <columns>Incident_Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>